--- a/index.html
+++ b/index.html
@@ -9,7 +9,13 @@
         <link rel="stylesheet" href="distri-model.css" type="text/css">
     </head>
     <body>
-        <h1>Reef Token Distribution & Utility Model</h1>
+        <header>
+        <div class="badge-airlie">
+        <img src="airlie.png" alt="Airlie Logo">
+        $AIRLIE
+        </div>
+        <span>Reef Token Distribution & Utility Model</span>
+        </header>
         <hr><hr>
 
         <h2>🌱 1. Distribution: How people earn the token</h2>
@@ -135,3 +141,4 @@
 
     </body>
 </html>
+
