--- a/index.html
+++ b/index.html
@@ -138,7 +138,12 @@
             <li>A gamified journey toward reef protection</li>
         </ul>
         <p>People don’t just learn about the reef — they feel connected to it.</p>
+        
+    <footer>
+        Airlie Reef Project — Protecting the reef, one action at a time.
+    </footer>
 
     </body>
 </html>
+
 
