--- a/index.html
+++ b/index.html
@@ -9,13 +9,7 @@
         <link rel="stylesheet" href="distri-model.css" type="text/css">
     </head>
     <body>
-        <header>
-        <div class="badge-airlie">
-        <img src="airlie.png" alt="Airlie Logo">
-        $AIRLIE
-        </div>
-        <span>Reef Token Distribution & Utility Model</span>
-        </header>
+        <h1>Reef Token Distribution & Utility Model</h1>
         <hr><hr>
 
         <h2>🌱 1. Distribution: How people earn the token</h2>
@@ -145,5 +139,6 @@
 
     </body>
 </html>
+
 
 
