--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <h1>Reef Token Distribution & Utility Model</h1>
         <hr><hr>
 
-        <h2>🌱 1. Distribution: How people earn the token</h2>
+        <h2>🪸  1. Distribution: How people earn the token</h2>
         <p>Think of distribution as storytelling: every token should represent a real action that helps the reef or builds awareness.</p>
         <p>Here are three distribution models you can mix and match:</p>
         <hr>
@@ -139,6 +139,7 @@
 
     </body>
 </html>
+
 
 
 
