--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <link rel="stylesheet" href="distri-model.css" type="text/css">
     </head>
     <body>
-        <h1>Reef Token Distribution & Utility Model</h1>
+        <h1>$AIRLIE Reef Token Distribution & Utility Model</h1>
         <hr><hr>
 
         <h2>🪸  1. Distribution: How people earn the token</h2>
@@ -139,6 +139,7 @@
 
     </body>
 </html>
+
 
 
 
