--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
         <h2>🪸  1. Distribution: How people earn the token</h2>
         <p>Think of distribution as storytelling: every token should represent a real action that helps the reef or builds awareness.</p>
-        <p>Here are three distribution models you can mix and match:</p>
+        <p>Here are three distribution models:</p>
         <hr>
 
         <h3>✅ A. Action‑Based Distribution (the strongest for conservation)</h3>
@@ -139,6 +139,7 @@
 
     </body>
 </html>
+
 
 
 
