--- a/index.html
+++ b/index.html
@@ -73,6 +73,8 @@ By merging blockchain incentives with environmental restoration, this project ta
 <hr>
 
 <h2>✅ 3. High‑Level Solution</h2>
+<p><a href="solution-overview.html" class="section-button">View Solution Overview</a></p>
+
 <p>
 We are building a decentralized ecosystem powered by a token that rewards users for contributing to the preservation of underwater life.
 </p>
