--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
         <div class="header-right">
             <a href="tokenomics.html" class="badge-airlie">
-                <img src="assets/airlie.png" alt="Airlie Logo">
+                <img src="airlie.png" alt="Airlie Logo">
                 $AIRLIE
             </a>
 
@@ -43,7 +43,7 @@
     </header>
 
     <div class="hero-content fade-in">
-        <img src="assets/airlie.png" alt="Ari the Turtle" class="ari-icon" width="80" height="80">
+        <img src="airlie.png" alt="Ari the Turtle" class="ari-icon" width="80" height="80">
         <h1>Restore Underwater Life. Empower People Worldwide.</h1>
         <p>A global, decentralized ecosystem where every action creates real environmental impact and real financial freedom — powered by the $AIRLIE token on Pi Testnet.</p>
 
@@ -213,4 +213,5 @@
 </footer>
 
 </body>
+
 </html>
