--- a/project-brief.html
+++ b/project-brief.html
@@ -26,7 +26,7 @@
 
     <div class="header-right">
         <a href="tokenomics.html" class="badge-airlie">
-            <img src="assets/airlie.png" alt="Airlie Logo">
+            <img src="airlie.png" alt="Airlie Logo">
             $AIRLIE
         </a>
 
@@ -205,3 +205,4 @@ Our project sits at the intersection of:
 
 </body>
 </html>
+
