--- a/tokenomics.html
+++ b/tokenomics.html
@@ -26,7 +26,7 @@
 
     <div class="header-right">
         <a href="tokenomics.html" class="badge-airlie">
-            <img src="assets/airlie.png" alt="Airlie Logo">
+            <img src="airlie.png" alt="Airlie Logo">
             $AIRLIE
         </a>
 
@@ -390,4 +390,5 @@ Participate → Earn Stake → Multiply Engage → Create Impact Activity → Fe
 </footer>
 
 </body>
+
 </html>
