--- a/project-brief.html
+++ b/project-brief.html
@@ -31,8 +31,8 @@
         </a>
 
         <label class="dark-switch">
-            <input type="checkbox" id="dark-toggle">
-            <span class="dark-icon"></span>
+                <input type="checkbox" id="dark-toggle" aria-label="Toggle Dark Mode">
+                <span class="dark-icon">🌙 / ☀️</span>
         </label>
     </div>
 </header>
@@ -205,4 +205,5 @@ Our project sits at the intersection of:
 
 </body>
 </html>
+
 
