--- a/tokenomics.html
+++ b/tokenomics.html
@@ -31,8 +31,8 @@
         </a>
 
         <label class="dark-switch">
-            <input type="checkbox" id="dark-toggle">
-            <span class="dark-icon"></span>
+                <input type="checkbox" id="dark-toggle" aria-label="Toggle Dark Mode">
+                <span class="dark-icon">🌙 / ☀️</span>
         </label>
     </div>
 </header>
@@ -392,3 +392,4 @@ Participate → Earn Stake → Multiply Engage → Create Impact Activity → Fe
 </body>
 
 </html>
+
