--- a/index.html
+++ b/index.html
@@ -44,12 +44,13 @@
 
     <div class="hero-content fade-in">
         <img src="airlie.png" alt="Ari the Turtle" class="ari-icon" width="80" height="80">
-        <h1>Restore Underwater Life. Empower People Worldwide.</h1>
+        <h1>Restore Underwater Life.
+            <br>Empower People Worldwide.</h1>
         <p>A global, decentralized ecosystem where every action creates real environmental impact and real financial freedom — powered by the $AIRLIE token on Pi Testnet.</p>
 
         <div class="hero-buttons">
             <a href="whitepaper.pdf" class="section-button">Read Whitepaper v1.2</a>
-            <a href="https://discord.com/invite/[your-invite]" class="section-button alt">Join Community</a>
+            <a href="t.me/AIRLIEToken" class="section-button alt">Join Community</a>
         </div>
 
         <div class="hero-stats">
@@ -215,3 +216,4 @@
 </body>
 
 </html>
+
