--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 
         <div class="hero-buttons">
             <a href="whitepaper.pdf" class="section-button">Read Whitepaper v1.2</a>
-            <a href="t.me/AIRLIEToken" class="section-button alt">Join Community</a>
+            <a href="https://t.me/AIRLIE_Token" class="section-button alt">Join Community</a>
         </div>
 
         <div class="hero-stats">
@@ -216,4 +216,5 @@
 </body>
 
 </html>
+
 
