--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
         <p>Help restore underwater ecosystems and build financial freedom together. Get started on testnet today!</p>
 
         <div class="hero-buttons">
-            <a href="https://discord.com/invite/[your-invite]" class="section-button">Join Community</a>
+            <a href="https://t.me/AIRLIE_Token" class="section-button">Join Community</a>
             <a href="whitepaper.pdf" class="section-button alt">Read Whitepaper</a>
         </div>
     </section>
@@ -216,5 +216,6 @@
 </body>
 
 </html>
+
 
 
