--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
         <div class="header-right">
             <a href="tokenomics.html" class="badge-airlie">
-                <img src="airlie.png" alt="Airlie Logo">
+                <img src="assets/airlie.png" alt="Airlie Logo">
                 $AIRLIE
             </a>
 
@@ -43,7 +43,7 @@
     </header>
 
     <div class="hero-content fade-in">
-        <img src="airlie.png" alt="Ari the Turtle" class="ari-icon" width="80" height="80">
+        <img src="assets/airlie.png" alt="Ari the Turtle" class="ari-icon" width="80" height="80">
         <h1>Restore Underwater Life.
             <br>Empower People Worldwide.</h1>
         <p>A global, decentralized ecosystem where every action creates real environmental impact and real financial freedom — powered by the $AIRLIE token on Pi Testnet.</p>
@@ -51,6 +51,9 @@
         <div class="hero-buttons">
             <a href="whitepaper.pdf" class="section-button">Read Whitepaper v1.2</a>
             <a href="https://t.me/AIRLIE_Token" class="section-button alt">Join Community</a>
+            <a href="start-helping.html" class="section-button" style="background: var(--accent);">
+                Start Helping Now
+            </a>
         </div>
 
         <div class="hero-stats">
@@ -107,10 +110,10 @@
         <h2>What $AIRLIE Is Used For</h2>
 
         <ul>
-            <li><strong>Stake</strong> — Fund reef restoration and earn rewards (e.g., multipliers on missions)</li>
-            <li><strong>Spend</strong> — Unlock upgrades, species, and premium features in the marketplace</li>
-            <li><strong>Vote</strong> — Shape the future through decentralized governance</li>
-            <li><strong>Earn</strong> — Complete missions, challenges, and conservation tasks (e.g., eco-tourism check-ins)</li>
+            <li><strong>Stake</strong> — Fund reef restoration and earn rewards</li>
+            <li><strong>Spend</strong> — Unlock upgrades and premium features</li>
+            <li><strong>Vote</strong> — Shape the future through governance</li>
+            <li><strong>Earn</strong> — Complete missions and conservation tasks</li>
         </ul>
 
         <a href="tokenomics.html" class="pill-link">View Tokenomics →</a>
@@ -181,8 +184,7 @@
         <h2>Connect With Us</h2>
         <div class="social-icons">
             <a href="https://x.com/AirlieToken">X</a>
-            <a href="https://discord.com/invite/[your-invite]">Discord</a>
-            <a href="https://t.me/[your-group]">Telegram</a>
+            <a href="https://t.me/AIRLIE_Token">Telegram</a>
         </div>
     </section>
 
@@ -195,6 +197,9 @@
         <div class="hero-buttons">
             <a href="https://t.me/AIRLIE_Token" class="section-button">Join Community</a>
             <a href="whitepaper.pdf" class="section-button alt">Read Whitepaper</a>
+            <a href="start-helping.html" class="section-button" style="background: var(--accent);">
+                Start Helping Now
+            </a>
         </div>
     </section>
 
@@ -214,8 +219,4 @@
 </footer>
 
 </body>
-
 </html>
-
-
-
