--- a/start-helping.html
+++ b/start-helping.html
@@ -25,7 +25,7 @@
 
     <div class="header-right">
         <a href="tokenomics.html" class="badge-airlie">
-            <img src="assets/airlie.png" alt="Airlie Logo">
+            <img src="airlie.png" alt="Airlie Logo">
             $AIRLIE
         </a>
 
@@ -193,3 +193,4 @@
 
 </body>
 </html>
+
